kubernetes/manifest/base-stg/ollama-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gpt-portal-ollama
  namespace: gpt-portal
  labels:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: gpt-portal
spec:
  selector:
    matchLabels:
      app: gpt-portal
  serviceName: gpt-portal-ollama-service
  replicas: 1
  template:
    metadata:
      labels:
        app: gpt-portal
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: ap-southeast-1c
        app: openwebui-arm64
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "2000m"
            memory: "2Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
        volumeMounts:
        - name: gpt-portal-ollama-volume
          mountPath: /root/.ollama
        tty: true
      tolerations:
      - key: "karpenter.sh/capacity-type"
        operator: "Exists"
        effect: "NoSchedule"
  volumeClaimTemplates:
  - metadata:
      name: gpt-portal-ollama-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ebs-sc
      resources:
        requests:
          storage: 30Gi
