kubernetes/manifest/base-stg/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpt-portal-ollama-service
  namespace: gpt-portal
  labels:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: gpt-portal
spec:
  selector:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: gpt-portal
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
